--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.reactivex.rxjava2</groupId>
+			<artifactId>rxjava</artifactId>
+			<version>2.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
